--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.pro.user
 *.ui.autosave
 
+*Debug/
 build-Lesson11-Desktop-Debug/
 build-Lesson11 (QStatusBar)-Desktop-Debug/
+build-Lesson12 QStatusBar-Desktop-Debug/
 
